--- a/src/components/sections/Sek5ZweiWelten.module.css
+++ b/src/components/sections/Sek5ZweiWelten.module.css
@@ -12,7 +12,7 @@
 
 .room {
   width: 100vw;
-  height: 100dvh;
+  height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
